--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vocabella - Home</title>
-    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Vocabella</title>
+    <link rel="stylesheet" href="styles (1).css"/>
 </head>
 <body>
     <header class="navbar">
@@ -18,11 +17,11 @@
         </nav>
     </header>
     <main class="content">
-        <h2>Welcome to Vocabella</h2>
-        <p>Master languages with interactive lessons, quizzes, and flashcards.</p>
+        <h2>Welcome</h2>
+        <p>Learn languages with fun lessons, engaging quizzes, and handy flashcards.</p>
     </main>
     <footer class="footer">
-        <p>Created by Sadashiv Mule © 2025</p>
+        <p>© 2025 by Sadashiv Mule</p>
     </footer>
     <script src="script.js"></script>
 </body>
