--- a/lessons.html
+++ b/lessons.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vocabella - Lessons</title>
-    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Lessons | Vocabella</title>
+    <link rel="stylesheet" href="styles (1).css"/>
 </head>
 <body>
     <header class="navbar">
@@ -18,13 +17,11 @@
         </nav>
     </header>
     <main class="content">
-        <h2>Language Lessons</h2>
-        <p>Start with basic phrases and grammar fundamentals.</p>
+        <h2>Lessons</h2>
+        <p>Start with common phrases and grammar essentials.</p>
     </main>
-    
     <footer class="footer">
-        <p>Created by Sadashiv Mule © 2025</p>
+        <p>© 2025 by Sadashiv Mule</p>
     </footer>
-
 </body>
 </html>
