--- a/vocabulary.html
+++ b/vocabulary.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vocabella - Vocabulary</title>
-    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Vocabulary | Vocabella</title>
+    <link rel="stylesheet" href="styles (1).css"/>
 </head>
 <body>
     <header class="navbar">
@@ -18,7 +17,7 @@
         </nav>
     </header>
     <main class="content">
-        <h2>Vocabulary Flashcards</h2>
+        <h2>Flashcards</h2>
         <div class="flashcard-container">
             <div class="flashcard">
                 <div class="front">Bonjour</div>
@@ -30,10 +29,8 @@
             </div>
         </div>
     </main>
-    
     <footer class="footer">
-        <p>Created by Sadashiv Mule © 2025</p>
+        <p>© 2025 by Sadashiv Mule</p>
     </footer>
-
 </body>
 </html>
